--- a/server-overlay/etc/lava-server/dispatcher-config/devices/qemu-01.jinja2
+++ b/server-overlay/etc/lava-server/dispatcher-config/devices/qemu-01.jinja2
@@ -1,4 +1,5 @@
 {% extends 'qemu.jinja2' %}
 {% set mac_addr = 'DE:AD:BE:EF:66:01' %}
 {% set memory = 1024 %}
+{% set no_kvm = 1 %}
 {% set netdevice = 'tap' %}
