Add localhost in allowed_hosts
Change-Id: Id26eb5449e5b787db3c173fd30dc94a77ebe6194

--- a/server-overlay/etc/lava-server/settings.jinja2
+++ b/server-overlay/etc/lava-server/settings.jinja2
@@ -3,7 +3,7 @@
     "MOUNT_POINT": "/",
     "EVENT_NOTIFICATION": true,
     "EVENT_TOPIC": "localhost.lava",
-    "ALLOWED_HOSTS": ["{{ LAVA_SERVER_DNS_HOSTNAME }}", "127.0.0.1"],
+    "ALLOWED_HOSTS": ["{{ LAVA_SERVER_DNS_HOSTNAME }}", "127.0.0.1", "localhost"],
     "CSRF_TRUSTED_ORIGINS": [],
     "SESSION_COOKIE_SECURE": false,
     "CSRF_COOKIE_SECURE": false
