--- a/server-overlay/root/provision.jinja2
+++ b/server-overlay/root/provision.jinja2
@@ -19,6 +19,9 @@ lava-server manage users list | grep -q {{ USER['name'] }} || \
       lava-server manage users add {{ staff }} {{ superuser }} --passwd {{ USER['password'] }} {{ USER['name'] }}
 {% endfor %}
 
+lava-server manage workers list | grep dispatcher || \
+    lava-server manage workers add dispatcher
+
 {% for BOARD in BOARDS %}
 
 lava-server manage device-types list | grep -q {{ BOARD['type'] }} || \
