--- a/templates/docker-compose_master.jinja2
+++ b/templates/docker-compose_master.jinja2
@@ -10,12 +10,17 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
 
+  squid:
+    image: datadog/squid
+    container_name: lava_squid
+    volumes:
+      - squid:/var/spool/squid
+      - ./squid/squid.conf:/etc/squid/squid.conf
+    ports:
+      - 3128:3128
+
   {{ LAVA_SERVER_HOSTNAME }}:
-    #image: lavasoftware/amd64-lava-server:2019.01
-    # Use an updated entrypoint; this is necessary to run provision.sh at boot time
-    # See https://git.lavasoftware.org/lava/pkg/docker/merge_requests/10
-    build:
-      context: ./server-docker
+    image: lavasoftware/lava-server:2019.05
 
     container_name: lava_server
     ports:
@@ -31,9 +36,10 @@ services:
       - {{ LAVA_SERVER_OVERLAY_PATH }}/etc/lava-server/instance.conf:/etc/lava-server/instance.conf
       - {{ LAVA_SERVER_OVERLAY_PATH }}/etc/lava-server/dispatcher-config/health-checks:/etc/lava-server/dispatcher-config/health-checks
       - {{ LAVA_SERVER_OVERLAY_PATH }}/etc/lava-server/dispatcher-config/devices:/etc/lava-server/dispatcher-config/devices
+      - {{ LAVA_SERVER_OVERLAY_PATH }}/etc/lava-server/env.yaml:/etc/lava-server/env.yaml
 
       # provisioning script to add users and boards
-      - {{ LAVA_SERVER_OVERLAY_PATH }}/root/provision.sh:/root/provision.sh
+      - {{ LAVA_SERVER_OVERLAY_PATH }}/root/entrypoint.d/provision.sh:/root/entrypoint.d/provision.sh
 
     depends_on:
       - database
@@ -48,6 +54,10 @@ volumes:
   # postgres data volume
   pgdata:
     name: lava-server-pgdata
+
+  # squid cache volume
+  squid:
+    name: lava-squid-cache
 
   # lava-server job artifact volume
   joboutput:
